crates/oxc_react_compiler/tests/snapshots/capturing-function-shadow-captured.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/capturing-function-shadow-captured.js
---
import { c as _c } from "react/compiler-runtime";
import { mutate, Stringify } from "shared-runtime";
function Component(t0) {
	const $ = _c(1);
	const x = _temp;
	let t1;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		t1 = <Stringify fn={x} shouldInvokeFns={true} />;
		$[0] = t1;
	} else {
		t1 = $[0];
	}
	return t1;
}
function _temp() {
	let z_0;
	mutate(z_0);
	return z_0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ a: 1 }],
	sequentialRenders: [
		{ a: 1 },
		{ a: 1 },
		{ a: 2 }
	]
};
