crates/oxc_react_compiler/tests/snapshots/capturing-function-within-block.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/capturing-function-within-block.js
---
import { c as _c } from "react/compiler-runtime";
function component(a) {
	const $ = _c(4);
	let t0;
	if ($[0] !== a) {
		t0 = { a };
		$[0] = a;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	const z = t0;
	let x;
	let t1;
	if ($[2] !== z) {
		t1 = function() {
			console.log(z);
		};
		$[2] = z;
		$[3] = t1;
	} else {
		t1 = $[3];
	}
	x = t1;
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
