crates/oxc_react_compiler/tests/snapshots/capturing-reference-changes-type.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/capturing-reference-changes-type.js
---
import { c as _c } from "react/compiler-runtime";
import { mutate } from "shared-runtime";
function Component(t0) {
	const $ = _c(2);
	const { a } = t0;
	let y;
	if ($[0] !== a) {
		const x = { a };
		y = 1;
		y = x;
		mutate(y);
		$[0] = a;
		$[1] = y;
	} else {
		y = $[1];
	}
	return y;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: [{ a: 2 }],
	sequentialRenders: [
		{ a: 2 },
		{ a: 2 },
		{ a: 3 }
	]
};
