crates/oxc_react_compiler/tests/snapshots/capturing-variable-in-nested-function.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/capturing-variable-in-nested-function.js
---
import { c as _c } from "react/compiler-runtime";
function component(a) {
	const $ = _c(2);
	let t0;
	if ($[0] !== a) {
		const z = { a };
		t0 = function() {
			(function() {
				console.log(z);
			})();
		};
		$[0] = a;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	const x = t0;
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
